specify z-index to ensure header stays on top

--- a/styles/main.css
+++ b/styles/main.css
@@ -98,6 +98,7 @@ li {
   position: fixed;
   top: 0px;
   left: 0px;
+  z-index: 1;
 }
 
 .header-logo {
